Fixed bug differenceCardDivParagraph. Reveal hidden cards after hi lo selections. Fix chipCount not showing after equation forming. My hidden card shows vignette box shadow. Next hand button is now green and at bottom of page. Fix difference paragraph letter spacing. Fix countdown notification. Fix result paragraph spacing.

--- a/public/style.css
+++ b/public/style.css
@@ -85,11 +85,12 @@ body { margin: 0; /*overflow: hidden; */background-color: hsl(183, 89%, 31%); fo
 
 .result-paragraph {
     margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
     color: black;
 }
 
 .difference-paragraph {
-    letter-spacing: -1rem;
+    letter-spacing: -.1rem;
     margin-block-start: 0em;
     color: red;
 }
@@ -188,8 +189,7 @@ body { margin: 0; /*overflow: hidden; */background-color: hsl(183, 89%, 31%); fo
 #callRaiseButton,
 #foldButton,
 #allInButton,
-#startButton,
-#confirmResults {
+#startButton {
     padding: 10px 16px;
     font-size: 16px;
     border: none;
@@ -198,6 +198,21 @@ body { margin: 0; /*overflow: hidden; */background-color: hsl(183, 89%, 31%); fo
     color: white;
     transition: background-color 0.2s ease;
     cursor: pointer;
+}
+
+#confirmResults {
+    padding: 10px 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 6px;
+    background-color: limegreen;
+    color: white;
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translateX(-50%)
 }
 
 #joinButton:hover,
